--- a/README
+++ b/README
@@ -59,7 +59,8 @@ This pipeline is open source under the MIT license, and researchers are welcome
 to use it.
 We will appreciate if users can let us know if they found bugs or could provide
 feedback about its use and experience using RACS.
-Please cite our paper (https://arxiv.org/abs/1905.02771) when ever you are using RACS.
+Please cite our paper (BMC Bioinformatics 20, 533 (2019) doi:10.1186/s12859-019-3100-2
+-- https://arxiv.org/abs/1905.02771) when ever you are using RACS.
 
 *******************************************************************************
 
@@ -777,7 +778,9 @@ feedback about its use and experience using RACS.
 Please cite the following paper when ever you are using RACS:
 
 - "RACS: Rapid Analysis of ChIP-Seq data for contig based genomes",
-  Ponce et al., BMC under review -- https://arxiv.org/abs/1905.02771
+  Saettone et al., BMC Bioinformatics volume 20, Article number: 533 (2019)
+  https://doi.org/10.1186/s12859-019-3100-2
+  https://arxiv.org/abs/1905.02771
 
 
 Publications where RACS has been used:
